...
                                    <outlet property="dataSource" destination="Nyn-Up-88N" id="2SC-0L-mVb"/>
                                    <outlet property="delegate" destination="Nyn-Up-88N" id="Bjw-Bt-Brg"/>
                                </connections>
                            </tableView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VjL-Q0-MbS">
                                <rect key="frame" x="35" y="118" width="278" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="txtSearch"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="35" id="lTw-u7-D3f"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tDc-PA-RtP">
                                <rect key="frame" x="328" y="118" width="51" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnSearch"/>
                                <state key="normal" title="Search"/>
                                <connections>
                                    <action selector="SearchClick:" destination="Nyn-Up-88N" eventType="touchUpInside" id="t1a-Re-ZFV"/>
                                </connections>
                            </button>
                        </subviews>
...
                    </view>
                    <navigationItem key="navigationItem" id="Mov-bR-XYH"/>
                    <connections>
                        <outlet property="imageViewAlbum" destination="Cte-Vw-U7S" id="Rre-dS-AXR"/>
                        <outlet property="labelAlbum" destination="WcJ-Qr-qs7" id="oo7-tc-aiz"/>
                        <outlet property="labelArtistName" destination="VDC-KA-XQN" id="s0V-yC-UlB"/>
                        <outlet property="tableViewSongsAlbum" destination="men-cb-4tZ" id="HMM-FK-EEV"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="5lb-Aj-6ak" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1963.7681159420292" y="-185.49107142857142"/>
        </scene>
...
                                        <connections>
                                            <action selector="stopSong:" destination="DdA-hm-j5a" eventType="touchUpInside" id="k6w-vZ-XL1"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xts-0Q-mTG">
                                        <rect key="frame" x="80" y="185" width="30" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="btnPlay"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="30" id="E7p-g2-2P6"/>
                                            <constraint firstAttribute="height" constant="30" id="qjb-4Y-ZzI"/>
                                        </constraints>
                                        <state key="normal" title="Button" image="play"/>
                                        <connections>
...
