...
    var listSearched:[ItunesModel]!
    
    private var dataSaved:DataSaved = DataSaved.getInstance()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        tableView.accessibilityIdentifier = "tableViewSongs"
        let data:Data? = dataSaved.getSearchByTermAlreadyExists(term: termSearched)
        do {
            let json:JSON = getJsonFromData(data: data!)
            
            listSearched = try JSONDecoder().decode([ItunesModel].self, from: json["results"].rawString()!.data(using: String.Encoding.utf8)!)
            
...
